Fix action area alignment

--- a/index.css
+++ b/index.css
@@ -82,12 +82,6 @@ body {
   background-color: #c026d3;
   color: #f5d0fe;
 }
-.draw-cards-btn:disabled {
-  height: 0;
-  width: 0;
-  font-size: 0;
-  background-color: inherit;
-}
 
 .placeholder-card {
   min-width: 22vw;
